--- a/src/styles/PreNavbar.css
+++ b/src/styles/PreNavbar.css
@@ -6,7 +6,9 @@
 }
 
 .preNav > div {
-padding: 0.5vmax 4vmax;
+padding: 0vmax 4vmax;
+display: flex;
+align-items: center;
 }
 
 .preNav > div > span {
@@ -23,3 +25,14 @@ padding: 0.5vmax 4vmax;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   text-decoration: none;
 }
+
+.preNav > div > a:hover {
+  color: white;
+}
+
+.preNav > div svg {
+  fill: rgb(190, 181, 181);
+}
+.preNav > div svg:hover {
+    fill: white;
+  }
