--- a/src/styles/HotItemcard.css
+++ b/src/styles/HotItemcard.css
@@ -1,16 +1,38 @@
-.HotItemcard{
+.HotItemCard{
     display: flex;
-    align-items: center;
     flex-direction: column;
+    align-items: center; 
     background-color: white;
     width: 31%;
+    margin:  0.7vmax;
+    transition: all 0.5s;
+    cursor: pointer;
+
 }
 
-.HotItemcard > img{
-    width:70%;
+.HotItemCard:hover{
+    transform: translateY(-0.4vmax);
+    box-shadow: 0px 6px 15px rgba(53, 53, 53, 0.363);
+
 }
 
-.HotItemcard > p{
- font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
- color: rgb(85, 83, 83);
+
+.HotItemCard > img{
+    width: 70%;
+
+}
+
+
+.HotItemCard > p {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: rgb(85, 83, 83);
+
+}
+
+.HotItemCard > span{
+    margin: -1vmax 0 1vmax 0;
+    color: orangered;
+
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
 }
